# rust-sdks

./: .gitattributes  .gitignore  .gitmodules  .nanparc  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVICE_PATH_UPDATE.md  JETSON_QUICK_START.md  JETSON_TESTING.md  JETSON_V4L2_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  V4L2_CAPABILITY_FIX.md  V4L2_HEVC_FIX.md  V4L2_IMPLEMENTATION_COMPLETE.md  a2a_relay_architecture_plan.md  apply_vpl_patches.sh  build.rs  check_jetson_devices.sh  codebase_insights.md  cspell.yml  diagnose_v4l2.sh  download_ffi.py  download_ffi.sh  download_onnx_models.sh  generate-proto.sh  knope.toml  licenserc.toml  main.cpp  packages.json  rebuild_v4l2.sh  release-plz.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  stats.proto  verify_jetson.sh
crates/livekit-core/: Cargo.toml  build.rs
device-info/: CHANGELOG.md  Cargo.toml
device-info/src/: lib.rs
examples/a2a_mock_agent/: Cargo.toml
examples/a2a_relay/: Cargo.toml
examples/agent_audio_latency/: Cargo.toml  README.md
examples/agent_dispatch/: Cargo.toml  README.md
examples/basic_data_track/: Cargo.toml  README.md
libwebrtc/: .gitignore  .nanparc  CHANGELOG.md  Cargo.toml  NOTICE.md  build.rs  generate_bindgen.sh  generate_jni_symbols.sh
libwebrtc/libwebrtc/: .gcs_entries  boringssl_prefix_symbols.txt  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.cmd
libwebrtc/src/: apm.rs  audio_frame.rs  audio_mixer.rs  audio_source.rs  audio_stream.rs  audio_track.rs  data_channel.rs  desktop_capturer.rs  encoded_audio_frame.rs  encoded_audio_frame_stream.rs  encoded_video_frame_stream.rs  encoded_video_source.rs  enum_dispatch.rs  frame_cryptor.rs  ice_candidate.rs  lib.rs  media_stream.rs  media_stream_track.rs  peer_connection.rs  peer_connection_factory.rs  prelude.rs  rtp_parameters.rs  rtp_receiver.rs  rtp_sender.rs  rtp_transceiver.rs  session_description.rs  stats.rs  video_frame.rs  video_frame_buffer.rs  video_frame_builder.rs  video_source.rs  video_stream.rs  video_track.rs  yuv_helper.rs
libwebrtc/tests/: flexfec.rs
livekit/: .nanparc  CHANGELOG.md  Cargo.toml  README.md  build.rs  deps
livekit-a2a-relay/: Cargo.toml
livekit-api/: .nanparc  CHANGELOG.md  Cargo.toml  README.md  build.rs
livekit-api/src/: access_token.rs  ffi.rs  http_client.rs  jwt_provider.rs  lib.rs  region.rs  test_token.txt  webhook_receiver.rs  webhooks.rs
livekit-api/tests/: services_async.rs
livekit-capture/: Cargo.toml  README.md  build.rs
livekit-capture/src/: device.rs  dmabuf.rs  encoded.rs  error.rs  lib.rs  libcamera_src.rs  metadata.rs  primitives.rs  publisher.rs  source.rs  time.rs  track.rs  uvc.rs
livekit-data-stream/: AGENTS.md  Cargo.toml  README.md
livekit-data-stream/src/: incoming.rs  info.rs  lib.rs  outgoing.rs  test_utils.rs  utils.rs
livekit-datatrack/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  uniffi.toml
livekit-datatrack/docs/: packet-v0.md
livekit-datatrack/fuzz/: Cargo.toml  README.md
livekit-datatrack/src/: api.rs  e2ee.rs  error.rs  frame.rs  lib.rs  mime.rs  schema.rs  track.rs
livekit-debouncer/: Cargo.toml
livekit-debouncer/src/: debouncer.rs  lib.rs
livekit-encoded-video-ingest/: Cargo.toml
livekit-encoded-video-ingest/src/: encoded_tcp.rs  keyframe.rs  lib.rs
livekit-ffi/: .gitignore  .nanparc  CHANGELOG.md  Cargo.toml  README.md  WEBRTC_LICENSE.md  build.rs  build_ios_framework.sh  cbindgen.toml  generate_proto.sh  generate_proto_win.bat
livekit-ffi-node-bindings/: .gitignore  Cargo.toml  README.md  build.rs  generate_proto.sh  index.d.ts  index.js  native.d.ts  native.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
livekit-ffi-node-bindings/proto/: audio_frame_pb.d.ts  audio_frame_pb.js  data_stream_pb.d.ts  data_stream_pb.js  data_track_pb.d.ts  data_track_pb.js  e2ee_pb.d.ts  e2ee_pb.js  ffi_pb.d.ts  ffi_pb.js  handle_pb.d.ts  handle_pb.js  participant_pb.d.ts  participant_pb.js  room_pb.d.ts  room_pb.js  rpc_pb.d.ts  rpc_pb.js  stats_pb.d.ts  stats_pb.js  track_pb.d.ts  track_pb.js  track_publication_pb.d.ts  track_publication_pb.js  video_frame_pb.d.ts  video_frame_pb.js
livekit-ffi-node-bindings/src/: index.ts  lib.rs  nodejs.rs
livekit-ffi/.cargo/: config
livekit-ffi/.nanpa/: rival-fang-bride.kdl  rpc-race.kdl
livekit-ffi/include/: livekit_ffi.h
livekit-ffi/protocol/: audio_frame.proto  audio_manager.proto  data_stream.proto  data_track.proto  e2ee.proto  encoded_tcp_ingest.proto  ffi.proto  handle.proto  metrics.proto  participant.proto  room.proto  rpc.proto  stats.proto  track.proto  track_publication.proto  video_frame.proto
livekit-ffi/src/: cabi.rs  conversion.rs  ffi.rs  lib.rs  livekit.proto.rs  proto.rs  server.rs
livekit-ffi/tests/: lib_load_test.rs
livekit-net/: CHANGELOG.md  Cargo.toml
livekit-net/src/: lib.rs  transport.rs  types.rs
livekit-net/tests/: globals.rs  native_parity.rs
livekit-protocol/: .nanparc  CHANGELOG.md  Cargo.toml  build.rs  generate_proto.sh
livekit-protocol/.changeset/: remove_dead_code.md
livekit-protocol/src/: debouncer.rs  enum_dispatch.rs  lib.rs  livekit.rs  livekit.serde.rs  observer.rs  promise.rs
livekit-runtime/: .nanparc  CHANGELOG.md  Cargo.toml
livekit-runtime/src/: async_std.rs  dispatcher.rs  lib.rs  tokio.rs
livekit-token/: Cargo.toml
livekit-token-source/: Cargo.toml  build-unity.sh  csharp9-downgrade.pl  uniffi.toml
livekit-token-source/src/: error.rs  lib.rs  request.rs  response.rs  token_source.rs
livekit-token/src/: lib.rs
livekit-uniffi/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  Package.swift  README.md  bindgen-dart.rs  bindgen.rs  bindgen.sh  build.rs  swift.sh  uniffi.toml
livekit-uniffi/node_test/: index.ts  package.json  pnpm-lock.yaml
livekit-utils/: Cargo.toml
livekit-wakeword/: CHANGELOG.md  Cargo.toml  README.md  build.rs
livekit-webrtc/: Cargo.toml
webrtc-sys/: .clang-format  .gitignore  .nanparc  CHANGELOG.md  Cargo.toml  NOTICE  README.md  build.rs  compile_flags.txt  generate_bindgen.sh  rtc.map
(+1769 files in other folders)
