[workspace]
resolver = "2"
members = [
    "livekit",
    "livekit-api",
    "livekit-protocol",
    "livekit-ffi",
    "livekit-uniffi",
    "livekit-datatrack",
    "livekit-ffi-node-bindings",
    "livekit-runtime",
    "libwebrtc",
    "soxr-sys",
    "yuv-sys",
    "imgproc",
    "webrtc-sys",
    "webrtc-sys/build",

    "examples/agent_dispatch",
    "examples/api",
    "examples/basic_room",
    "examples/basic_text_stream",
    "examples/encrypted_text_stream",
    "examples/local_audio",
    "examples/local_video",
    "examples/mobile",
    "examples/play_from_disk",
    "examples/rpc",
    "examples/save_to_disk",
    "examples/screensharing",
    "examples/send_bytes",
    "examples/webhooks",
    "examples/wgpu_room"
]

[workspace.package]
edition = "2021"
repository = "https://github.com/livekit/rust-sdks"
license = "Apache-2.0"

[workspace.dependencies]
imgproc = { version = "0.3.18", path = "imgproc" }
libwebrtc = { version = "0.3.26", path = "libwebrtc" }
livekit = { version = "0.7.32", path = "livekit" }
livekit-api = { version = "0.4.14", path = "livekit-api" }
livekit-ffi = { version = "0.12.48", path = "livekit-ffi" }
livekit-datatrack = { version = "0.1.0", path = "livekit-datatrack" }
livekit-protocol = { version = "0.7.1", path = "livekit-protocol" }
livekit-runtime = { version = "0.4.0", path = "livekit-runtime" }
soxr-sys = { version = "0.1.2", path = "soxr-sys" }
webrtc-sys = { version = "0.3.23", path = "webrtc-sys" }
webrtc-sys-build = { version = "0.3.13", path = "webrtc-sys/build" }
yuv-sys = { version = "0.3.13", path = "yuv-sys" }

anyhow = "1.0"
bytes = "1.10"
clap = "4.5"
console-subscriber = "0.1"
env_logger = "0.11"
from_variants = "1.0.2"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand = "0.9"
serde = "1"
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
