[package]
name = "device-info"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-ui-kit = { version = "0.3", features = ["UIDevice"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Navigator", "Window"] }
wasm-bindgen = "0.2"
