[package]
name = "device-info"
version = "0.1.1"
description = "Cross-platform device information"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos", target_os = "visionos", target_os = "watchos", target_os = "linux"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Navigator", "Window"] }
wasm-bindgen = "0.2"
