[package]
name = "libwebrtc"
version = "0.3.24"
edition.workspace = true
homepage = "https://livekit.io"
license.workspace = true
description = "Unsafe bindings to libwebrtc"
repository.workspace = true

[features]
default = []
static = []

[dependencies]
livekit-runtime = { workspace = true }
yuv-sys = { workspace = true }
log = { workspace = true }
parking_lot = "0.12.5"
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"

[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[build-dependencies]
webrtc-sys-build = { workspace = true }
cxx-build = "1.0"
glob = "0.3"
cc = "1.0"
pkg-config = "0.3.22"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
env_logger = { workspace = true }

[lib]
crate-type = ["lib", "staticlib"]
