[package]
name = "livekit-data-stream"
description = "Data stream core logic for LiveKit"
version = "0.1.0"
readme = "README.md"
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-utils = ["dep:rand"]

[dependencies]
livekit-common = { workspace = true }
livekit-protocol = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync", "fs", "io-util", "rt"] }
futures-util = { workspace = true, default-features = false, features = ["sink", "io"] }
prost = "0.12"
chrono = "0.4.38"
bmrng = "0.5.2"
uuid = { version = "1", features = ["v4"] }
async-compression = { version = "0.4.42", features = ["deflate", "futures-io"] }
from_variants.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
rand = { workspace = true }
