[package]
name = "livekit-datatrack"
description = "Data track core for LiveKit"
version = "0.1.4"
readme = "README.md"
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
livekit-protocol = { workspace = true }
livekit-runtime = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
futures-util = { workspace = true, default-features = false, features = ["sink"] }
futures-core = { workspace = true }
bytes = { workspace = true }
from_variants = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
anyhow = { workspace = true } # For internal error handling only
rand = { workspace = true }

[dev-dependencies]
test-case = "3.3"
fake = { version = "5.0", features = ["derive"] }
