[package]
name = "livekit-debouncer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Livekit debouncer utility"
repository = "https://github.com/livekit/rust-sdks"

[dependencies]
livekit-runtime = { workspace = true }
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
    "rt",
] }
futures-util = { version = "0.3", features = ["sink"] }
thiserror = "1.0"
